fixed the non-scrolling issue on Safari on the Mac

--- a/stylesheets/custom.css
+++ b/stylesheets/custom.css
@@ -3,6 +3,9 @@ body {
   padding: 0;
   margin: 0;
   width: 100%;
+  overflow: none;
+}
+body {
   overflow: hidden;
 }
 
